--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^3.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "prisma": "^3.0.2"
+    "prisma": "3.0.2"
   }
 }
